--- a/scripts/tiny_dwh/docker-compose.yaml
+++ b/scripts/tiny_dwh/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       POSTGRES_DB: "postgres"
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "pgpwd"
-      PGDATA = "/var/lib/postgresql/data/pgdata"
+      PGDATA: "/var/lib/postgresql/data/pgdata"
     volumes:
 #      - .:/docker-entrypoint-initdb.d # db init scripts (optional)
       - "/var/run/postgres/postgres.sock:/var/run/postgres/postgres.sock"
@@ -24,11 +24,11 @@ services:
     deploy:
       resources:
         limits:
-          cpus: 0.8
-          memory: 2G
+          cpus: "0.8"
+          memory: "2G"
         reservations:
-          cpus: 0.5
-          memory: 1G
+          cpus: "0.5"
+          memory: "1G"
 
   clickhouse:
     image: clickhouse/clickhouse-server22.4.2-alpine
@@ -42,8 +42,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: 0.8
-          memory: 2G
+          cpus: "0.8"
+          memory: "2G"
         reservations:
-          cpus: 0.5
-          memory: 1G
+          cpus: "0.5"
+          memory: "1G"
